testdata/result/dml/!bad_lex_first_token_dml.sql.txt
--- !bad_lex_first_token_dml.sql
'hello
--- Error
syntax error: testdata/input/dml/!bad_lex_first_token_dml.sql:1:1: unclosed string literal
  1|  'hello
   |  ^~~~~~


--- AST
&ast.BadDML{
  BadNode: &ast.BadNode{
    NodeEnd: 6,
    Tokens:  []*token.Token{
      &token.Token{
        Kind: "<bad>",
        Raw:  "'hello",
        End:  6,
      },
    },
  },
}

--- SQL
'hello
